--- a/ServiceEngine/App.config
+++ b/ServiceEngine/App.config
@@ -86,7 +86,10 @@
         <value>http://tf.local</value>
       </setting>
       <setting name="www_dir" serializeAs="String">
-        <value>../../../frontend/dist</value>
+        <value>../../../nuxt-frontend/dist</value>
+      </setting>
+      <setting name="MigrateDatabaseToLatestVersion" serializeAs="String">
+        <value>True</value>
       </setting>
     </ServiceEngine.My.MySettings>
   </applicationSettings>
