--- a/nuxt-frontend/package.json
+++ b/nuxt-frontend/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/i18n": "^7.0.2",
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
+    "vue-snotify": "^3.2.1",
     "vuetify": "^2.5.5"
   },
   "devDependencies": {
