--- a/ServiceEngine/App.config
+++ b/ServiceEngine/App.config
@@ -86,7 +86,7 @@
         <value>http://tf.local</value>
       </setting>
       <setting name="www_dir" serializeAs="String">
-        <value>../../../nuxt-frontend/dist</value>
+        <value>./www</value>
       </setting>
       <setting name="MigrateDatabaseToLatestVersion" serializeAs="String">
         <value>True</value>
