--- a/ServiceEngine/ServiceEngine.vbproj
+++ b/ServiceEngine/ServiceEngine.vbproj
@@ -149,6 +149,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Communications.vb" />
+    <Compile Include="Controllers\ProductsController.vb" />
     <Compile Include="Controllers\FabController.vb" />
     <Compile Include="Controllers\AuthController.vb" />
     <Compile Include="Controllers\ConfigController.vb" />
@@ -205,7 +206,6 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="www\" />
     <Folder Include="_Migrations\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
