Inizio della personalizzazione delle pagine
##Frontend:
- Creato un component per la lista dei Task e per l'aggiunta o la modifica.
- Corretto il laoyout di ON e FAB
- Apportato le prime modifiche per il multilinguaggio
- Sistemate delle pagine e inserito il logo TFO

##backend:
- Nuovo controller per l'acquisizione dei file
- Nuovi controller per liste dei fabbricanti e dei task attivi

--- a/ServiceEngine/ServiceEngine.vbproj
+++ b/ServiceEngine/ServiceEngine.vbproj
@@ -149,6 +149,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Communications.vb" />
+    <Compile Include="Controllers\ActivitiesController.vb" />
+    <Compile Include="Controllers\ActionsController.vb" />
     <Compile Include="Controllers\ProductsController.vb" />
     <Compile Include="Controllers\FabController.vb" />
     <Compile Include="Controllers\AuthController.vb" />
@@ -175,6 +177,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Providers\MultipartFileStreamProvider.vb" />
     <Compile Include="ServiceClass.vb" />
     <Compile Include="ValuesController.vb" />
   </ItemGroup>
