--- a/ServiceEngine/App.config
+++ b/ServiceEngine/App.config
@@ -9,10 +9,8 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=.\SQL2012;Initial Catalog=TFOnlineDB;Persist Security Info=True;User ID=sa;Password=Master.1"
-      providerName="System.Data.SqlClient" />
-    <add name="ServiceEngine.My.MySettings.DefaultConnection" connectionString="Data Source=.\SQL2012;Initial Catalog=TFOnlineDB;Persist Security Info=True;User ID=sa;Password=Master.1"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=.\SQL2012;Initial Catalog=TFOnlineDB;Persist Security Info=True;User ID=sa;Password=Master.1" providerName="System.Data.SqlClient" />
+    <add name="ServiceEngine.My.MySettings.DefaultConnection" connectionString="Data Source=.\SQL2012;Initial Catalog=TFOnlineDB;Persist Security Info=True;User ID=sa;Password=Master.1" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
@@ -21,7 +19,7 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.1.1.0" newVersion="4.1.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.0.0" newVersion="4.2.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" culture="neutral" />
