--- a/ServiceEngine/packages.config
+++ b/ServiceEngine/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
+  <package id="Ionic.Zip" version="1.9.1.8" targetFramework="net472" />
   <package id="log4net" version="2.0.12" targetFramework="net472" />
   <package id="Microsoft.AspNet.Cors" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.4.1" targetFramework="net472" />
@@ -9,11 +10,13 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.OwinSelfHost" version="5.2.7" targetFramework="net472" />
-  <package id="Microsoft.Owin" version="4.1.1" targetFramework="net472" />
+  <package id="Microsoft.Owin" version="4.2.0" targetFramework="net472" />
   <package id="Microsoft.Owin.Cors" version="4.1.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Diagnostics" version="4.1.1" targetFramework="net472" />
   <package id="Microsoft.Owin.FileSystems" version="4.1.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Host.HttpListener" version="4.1.1" targetFramework="net472" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.0" targetFramework="net472" />
+  <package id="Microsoft.Owin.Host.SystemWeb.it" version="4.2.0" targetFramework="net472" />
   <package id="Microsoft.Owin.Hosting" version="4.1.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Security" version="4.1.1" targetFramework="net472" />
   <package id="Microsoft.Owin.SelfHost" version="4.1.1" targetFramework="net472" />
