--- a/ServiceEngine/packages.config
+++ b/ServiceEngine/packages.config
@@ -24,6 +24,7 @@
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="NLog" version="4.7.5" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
+  <package id="OwinRequestScopeContext" version="1.0.1" targetFramework="net472" />
   <package id="Topshelf" version="4.2.1" targetFramework="net472" />
   <package id="Topshelf.Log4Net" version="4.2.1" targetFramework="net472" />
   <package id="Topshelf.NLog" version="4.2.1" targetFramework="net472" />
