--- a/ServiceEngine/packages.config
+++ b/ServiceEngine/packages.config
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
-  <package id="Ionic.Zip" version="1.9.1.8" targetFramework="net472" />
   <package id="log4net" version="2.0.12" targetFramework="net472" />
   <package id="Microsoft.AspNet.Cors" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.4.1" targetFramework="net472" />
@@ -25,6 +24,7 @@
   <package id="NLog" version="4.7.5" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="OwinRequestScopeContext" version="1.0.1" targetFramework="net472" />
+  <package id="Squid-Box.SevenZipSharp" version="1.5.0.366" targetFramework="net472" />
   <package id="Topshelf" version="4.2.1" targetFramework="net472" />
   <package id="Topshelf.Log4Net" version="4.2.1" targetFramework="net472" />
   <package id="Topshelf.NLog" version="4.2.1" targetFramework="net472" />
