--- a/ServiceEngine/App.config
+++ b/ServiceEngine/App.config
@@ -9,8 +9,10 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=.\SQL2012;Initial Catalog=TFOnlineDB;Persist Security Info=True;User ID=sa;Password=Master.1" providerName="System.Data.SqlClient" />
-    <add name="ServiceEngine.My.MySettings.DefaultConnection" connectionString="Data Source=.\SQL2012;Initial Catalog=TFOnlineDB;Persist Security Info=True;User ID=sa;Password=Master.1" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=.\SQL2012;Initial Catalog=TFOnlineDB;Persist Security Info=True;User ID=sa;Password=Master.1"
+      providerName="System.Data.SqlClient" />
+    <add name="ServiceEngine.My.MySettings.DefaultConnection" connectionString="Data Source=.\SQL2012;Initial Catalog=TFOnlineDB;Persist Security Info=True;User ID=sa;Password=Master.1"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
@@ -83,11 +85,17 @@
       <setting name="AlternariveUrl" serializeAs="String">
         <value>http://tf.local</value>
       </setting>
-      <setting name="www_dir" serializeAs="String">
-        <value>./www</value>
+      <setting name="path_www" serializeAs="String">
+        <value>../../../nuxt-frontend/dist</value>
       </setting>
       <setting name="MigrateDatabaseToLatestVersion" serializeAs="String">
         <value>True</value>
+      </setting>
+      <setting name="path_storage" serializeAs="String">
+        <value>www\files</value>
+      </setting>
+      <setting name="path_temp" serializeAs="String">
+        <value>www\temp</value>
       </setting>
     </ServiceEngine.My.MySettings>
   </applicationSettings>
