--- a/ServiceEngine/My Project/Settings.settings
+++ b/ServiceEngine/My Project/Settings.settings
@@ -16,11 +16,17 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=.\SQL2012;Initial Catalog=TFOnlineDB;Persist Security Info=True;User ID=sa;Password=Master.1</Value>
     </Setting>
-    <Setting Name="www_dir" Type="System.String" Scope="Application">
+    <Setting Name="path_www" Type="System.String" Scope="Application">
       <Value Profile="(Default)">../../../nuxt-frontend/dist</Value>
     </Setting>
     <Setting Name="MigrateDatabaseToLatestVersion" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="path_storage" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">www\files</Value>
+    </Setting>
+    <Setting Name="path_temp" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">www\temp</Value>
     </Setting>
   </Settings>
 </SettingsFile>
