--- a/ServiceEngine/App.config
+++ b/ServiceEngine/App.config
@@ -83,7 +83,7 @@
         <value>http://+:8095</value>
       </setting>
       <setting name="AlternariveUrl" serializeAs="String">
-        <value>http://tf.local</value>
+        <value>http://techfileonline.local</value>
       </setting>
       <setting name="path_www" serializeAs="String">
         <value>../../../nuxt-frontend/dist</value>
