--- a/ServiceEngine/My Project/Settings.settings
+++ b/ServiceEngine/My Project/Settings.settings
@@ -5,9 +5,6 @@
     <Setting Name="DefaultUrl" Type="System.String" Scope="Application">
       <Value Profile="(Default)">http://+:8095</Value>
     </Setting>
-    <Setting Name="AlternariveUrl" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">http://tf.local</Value>
-    </Setting>
     <Setting Name="DefaultConnection" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
@@ -27,6 +24,9 @@
     </Setting>
     <Setting Name="path_temp" Type="System.String" Scope="Application">
       <Value Profile="(Default)">www\temp</Value>
+    </Setting>
+    <Setting Name="AlternariveUrl" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">http://techfileonline.local</Value>
     </Setting>
   </Settings>
 </SettingsFile>
