Implementazioni su TFL
FRONTEND

Nuova icona
Implementato sul treeview il componente Opzioni e Owner
Aggiunto AllActions che comprende le interazioni per tutti i comandi racchiusi in una tabview

BACKEND

Aggiunti i controller per le azioni: Aggiungi allegato, Riporta in stato iniziale, cancella file, rinomina file.
Aggiunto il valore userOwner che permette di capire se il file o la cartella è stato aggiunto dall'utente.
riorganizzato porzioni di codice.

--- a/ServiceEngine/App.config
+++ b/ServiceEngine/App.config
@@ -9,9 +9,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=.\SQL2012;Initial Catalog=TFOnlineDB;Persist Security Info=True;User ID=sa;Password=Master.1"
+    <add name="DefaultConnection" connectionString="Data Source=.\SQL2012;Initial Catalog=TFOnlineDB_demo;Persist Security Info=True;User ID=sa;Password=Master.1"
       providerName="System.Data.SqlClient" />
-    <add name="ServiceEngine.My.MySettings.DefaultConnection" connectionString="Data Source=.\SQL2012;Initial Catalog=TFOnlineDB;Persist Security Info=True;User ID=sa;Password=Master.1"
+    <add name="ServiceEngine.My.MySettings.DefaultConnection" connectionString="Data Source=.\SQL2012;Initial Catalog=TFOnlineDB_demo;Persist Security Info=True;User ID=sa;Password=Master.1"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
