--- a/nuxt-frontend/package.json
+++ b/nuxt-frontend/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
+    "vue-pdf-app": "^2.1.0",
     "vue-snotify": "^3.2.1",
     "vuetify": "^2.5.5"
   },
